--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "gulp-less": "^1.3.6",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1",
-    "main-bower-files": "^2.4.0"
+    "main-bower-files": "^2.4.0",
+    "react": "^0.12.2",
+    "reactify": "^0.17.1"
   }
 }
