--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,7 @@
     "jquery": "~2.1.1",
     "marked": "~0.3.2",
     "backbone.localStorage": "~1.1.14",
-    "requirejs": "~2.1.15",
-    "backbone.dropboxDatastore": "~0.5.0",
-    "dropbox-datastore": "~1.0.0"
+    "requirejs": "~2.1.15"
   },
   "overrides": {
     "bootstrap": {
