--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1",
     "main-bower-files": "^2.4.0",
-    "react": "^0.12.2",
-    "reactify": "^0.17.1"
+    "riot": "^2.5.0"
   }
 }
